# cobra-cmd-with-docs

./: .gitpod.yml  BUILD.bazel  README.md  go.mod  go.sum
.gitpod/: Dockerfile
bazel/go/: deps.bzl
cmd/cobradocs/cmd/: BUILD.bazel  list.go  root.go
internal/aws/: BUILD.bazel  s3.go
internal/console/: BUILD.bazel  print.go
